GNOME Bugzilla – Bug 706335
doc: Fix typos
Last modified: 2013-08-20 16:20:06 UTC
Fix two typos in gtk/gtktexttag.c
Created attachment 252278 [details] [review] doc: Fix typos Fix two typos in gtk/gtktexttag.c.
Comment on attachment 252278 [details] [review] doc: Fix typos sure
Attachment 252278 [details] pushed as 112374b - doc: Fix typos